--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Juan Pablo Aprendiendo Git, GitHub</h1>
+    <a href="">Página Inicio</a>
+    <input type="text">
 </body>
 </html>
