--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>Juan Pablo Aprendiendo Git, GitHub</h1>
     <a href="">Página Inicio</a>
     <input type="text">
+    <form action="">Pagina de control de Usuarios</form>
+    <input type="submit">
 </body>
 </html>
